[gd_scene load_steps=7 format=3 uid="uid://dd7s4g3vhace7"]

[ext_resource type="Texture2D" uid="uid://bo0i8vy506073" path="res://Assets/pixel.png" id="1_3uq65"]
[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_f0tup"]
[ext_resource type="PackedScene" uid="uid://c0p6epnjrq8jv" path="res://Scenes/Player.tscn" id="2_v21ci"]
[ext_resource type="PackedScene" uid="uid://duhrf6jl1lvxh" path="res://Scenes/AI.tscn" id="5_a76bp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_16u61"]
size = Vector2(896, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4qcqt"]
size = Vector2(16, 480)

[node name="MainLevel" type="Node2D"]
script = ExtResource("1_f0tup")

[node name="Walls" type="StaticBody2D" parent="."]
position = Vector2(136, 56)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2(440, 0)
shape = SubResource("RectangleShape2D_16u61")

[node name="Sprite2D" type="Sprite2D" parent="Walls/CollisionShape2D"]
position = Vector2(7.62939e-06, 0)
scale = Vector2(896, 16)
texture = ExtResource("1_3uq65")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2(440, 464)
shape = SubResource("RectangleShape2D_16u61")

[node name="Sprite2D" type="Sprite2D" parent="Walls/CollisionShape2D2"]
position = Vector2(7.62939e-06, 0)
scale = Vector2(896, 16)
texture = ExtResource("1_3uq65")

[node name="Player" parent="." instance=ExtResource("2_v21ci")]
position = Vector2(136, 288)
scale = Vector2(1, 3)

[node name="Divider" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(576, 80)
scale = Vector2(16, 16)
texture = ExtResource("1_3uq65")

[node name="Divider2" type="Sprite2D" parent="Divider"]
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 2)
texture = ExtResource("1_3uq65")

[node name="Divider3" type="Sprite2D" parent="Divider"]
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 4)
texture = ExtResource("1_3uq65")

[node name="Divider4" type="Sprite2D" parent="Divider"]
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 6)
texture = ExtResource("1_3uq65")

[node name="Divider5" type="Sprite2D" parent="Divider"]
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 8)
texture = ExtResource("1_3uq65")

[node name="Divider6" type="Sprite2D" parent="Divider"]
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 10)
texture = ExtResource("1_3uq65")

[node name="Divider7" type="Sprite2D" parent="Divider"]
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 12)
texture = ExtResource("1_3uq65")

[node name="Divider8" type="Sprite2D" parent="Divider"]
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 14)
texture = ExtResource("1_3uq65")

[node name="Divider9" type="Sprite2D" parent="Divider"]
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 16)
texture = ExtResource("1_3uq65")

[node name="Divider10" type="Sprite2D" parent="Divider"]
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 18)
texture = ExtResource("1_3uq65")

[node name="Divider11" type="Sprite2D" parent="Divider"]
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 20)
texture = ExtResource("1_3uq65")

[node name="Divider12" type="Sprite2D" parent="Divider"]
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 22)
texture = ExtResource("1_3uq65")

[node name="Divider13" type="Sprite2D" parent="Divider"]
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 24)
texture = ExtResource("1_3uq65")

[node name="Divider14" type="Sprite2D" parent="Divider"]
self_modulate = Color(1, 1, 1, 0.392157)
position = Vector2(0, 26)
texture = ExtResource("1_3uq65")

[node name="PlayerZone" type="Area2D" parent="."]
position = Vector2(120, 56)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerZone"]
position = Vector2(0, 232)
shape = SubResource("RectangleShape2D_4qcqt")

[node name="EnemyZone" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(1032, 56)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyZone"]
position = Vector2(0, 232)
shape = SubResource("RectangleShape2D_4qcqt")

[node name="BallSpawnLocation" type="Node2D" parent="."]
position = Vector2(576, 288)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Labels" type="Control" parent="UI"]
modulate = Color(1, 1, 1, 0.588235)
anchors_preset = 0
offset_left = 128.0
offset_top = 64.0
offset_right = 168.0
offset_bottom = 104.0

[node name="PlayerScore" type="Label" parent="UI/Labels"]
layout_mode = 0
offset_right = 448.0
offset_bottom = 448.0
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyScore" type="Label" parent="UI/Labels"]
layout_mode = 0
offset_left = 448.0
offset_right = 896.0
offset_bottom = 448.0
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TabContainer" type="TabContainer" parent="UI"]
layout_mode = 0
offset_left = 128.0
offset_top = 536.0
offset_right = 1024.0
offset_bottom = 640.0

[node name="Controls" type="TabBar" parent="UI/TabContainer"]
layout_mode = 2
focus_mode = 0

[node name="RichTextLabel" type="RichTextLabel" parent="UI/TabContainer/Controls"]
layout_mode = 0
offset_left = 8.0
offset_top = 9.0
offset_right = 888.0
offset_bottom = 65.0
text = "[W/S] - To move Player	/ [R] - To restart Scene / [Mouse] - Selecting menu options"
fit_content = true

[node name="AI Settings" type="TabBar" parent="UI/TabContainer"]
visible = false
layout_mode = 2
focus_mode = 0

[node name="AIDifficulty" type="HSlider" parent="UI/TabContainer/AI Settings"]
layout_mode = 0
offset_left = 128.0
offset_top = 9.0
offset_right = 192.0
offset_bottom = 33.0
focus_mode = 0
min_value = 1.0
max_value = 3.0
value = 1.0

[node name="Label" type="Label" parent="UI/TabContainer/AI Settings"]
layout_mode = 0
offset_left = 16.0
offset_top = 9.0
offset_right = 104.0
offset_bottom = 32.0
text = "AI difficulty:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label2" type="Label" parent="UI/TabContainer/AI Settings"]
layout_mode = 0
offset_left = 16.0
offset_top = 41.0
offset_right = 108.0
offset_bottom = 64.0
text = "AI size:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="AISize" type="HSlider" parent="UI/TabContainer/AI Settings"]
layout_mode = 0
offset_left = 128.0
offset_top = 41.0
offset_right = 192.0
offset_bottom = 64.0
focus_mode = 0
min_value = 1.0
max_value = 3.0
value = 1.0

[node name="Player Settings" type="TabBar" parent="UI/TabContainer"]
visible = false
layout_mode = 2
focus_mode = 0

[node name="Label" type="Label" parent="UI/TabContainer/Player Settings"]
layout_mode = 0
offset_left = 32.0
offset_top = 9.0
offset_right = 119.0
offset_bottom = 32.0
text = "Player Size:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label2" type="Label" parent="UI/TabContainer/Player Settings"]
layout_mode = 0
offset_left = 16.0
offset_top = 41.0
offset_right = 103.0
offset_bottom = 64.0
text = "Player speed:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PlayerSize" type="HSlider" parent="UI/TabContainer/Player Settings"]
layout_mode = 0
offset_left = 128.0
offset_top = 9.0
offset_right = 192.0
offset_bottom = 33.0
focus_mode = 0
min_value = 1.0
max_value = 3.0
value = 1.0

[node name="PlayerSpeed" type="HSlider" parent="UI/TabContainer/Player Settings"]
layout_mode = 0
offset_left = 128.0
offset_top = 41.0
offset_right = 192.0
offset_bottom = 65.0
focus_mode = 0
min_value = 1.0
max_value = 3.0
value = 1.0

[node name="Misc" type="TabBar" parent="UI/TabContainer"]
visible = false
layout_mode = 2
focus_mode = 0

[node name="Button" type="Button" parent="UI/TabContainer/Misc"]
layout_mode = 0
offset_left = 8.0
offset_top = 9.0
offset_right = 128.0
offset_bottom = 40.0
focus_mode = 0
text = "Reset Score"

[node name="AI" parent="." instance=ExtResource("5_a76bp")]
position = Vector2(1016, 288)
scale = Vector2(1, 3)

[connection signal="body_entered" from="PlayerZone" to="." method="_on_player_zone_body_entered"]
[connection signal="body_entered" from="EnemyZone" to="." method="_on_enemy_zone_body_entered"]
[connection signal="drag_ended" from="UI/TabContainer/AI Settings/AIDifficulty" to="." method="_on_ai_difficulty_drag_ended"]
[connection signal="drag_ended" from="UI/TabContainer/AI Settings/AISize" to="." method="_on_ai_size_drag_ended"]
[connection signal="drag_ended" from="UI/TabContainer/Player Settings/PlayerSize" to="." method="_on_player_size_drag_ended"]
[connection signal="drag_ended" from="UI/TabContainer/Player Settings/PlayerSpeed" to="." method="_on_player_speed_drag_ended"]
[connection signal="pressed" from="UI/TabContainer/Misc/Button" to="." method="_on_button_pressed"]
